--- a/templates/prometheus-rules.yaml
+++ b/templates/prometheus-rules.yaml
@@ -23,9 +23,9 @@ spec:
         severity: warning
     - alert: POD_RAM_usageAboveLimits
       annotations:
-        description: 'Usage of RAM in namespace {{`{{`}} $labels.namespace {{`}}`}} for container {{`{{`}} $labels.container {{`}}`}} in pod {{`{{`}} $labels.pod {{`}}`}}.'
+        description: '{{ $value | humanizePercentage }} usage of RAM is up by 90 percent in namespace {{ $labels.namespace }} for container {{ $labels.container }} in pod {{ $labels.pod }}.'
         summary: "Processes experience  RAM usage more the 90 percent"
-      expr: (container_memory_usage_bytes / container_spec_memory_limit_bytes) * 100 > 90
+      expr: ((container_memory_usage_bytes / container_spec_memory_limit_bytes) != +Inf) * 100 > 90
       for: 5m
       labels:
         severity: warning
