--- a/templates/prometheus-rules.yaml
+++ b/templates/prometheus-rules.yaml
@@ -23,7 +23,7 @@ spec:
         severity: warning
     - alert: POD_RAM_usageAboveLimits
       annotations:
-        description: '{{ $value | humanizePercentage }} usage of RAM is up by 90 percent in namespace {{ $labels.namespace }} for container {{ $labels.container }} in pod {{ $labels.pod }}.'
+        description:  Usage of RAM is up by 90 percent in namespace {{ $labels.namespace }} for container {{ $labels.container }} in pod {{ $labels.pod }}.
         summary: "Processes experience  RAM usage more the 90 percent"
       expr: ((container_memory_usage_bytes / container_spec_memory_limit_bytes) != +Inf) * 100 > 90
       for: 5m
